trying to fix movie button being covered in mobile when txt is too long no luck

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -41,6 +41,7 @@ a {
 
 .movieText {
   position: absolute;
+  padding-left: 1em;
   bottom: 0;
   /* Moves text to bottom */
   left: 0;
